clusters/talos-ottawa/apps/home/gateway/gateway-private.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  labels:
    external-dns: unifi
    gateway: private
spec:
  gatewayClassName: private
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: killinit-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.killinit.cc"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: killinit-wildcard-tls
