clusters/talos-ottawa/apps/home/gateway/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  labels:
    # external-dns: unifi
    gateway: public
spec:
  gatewayClassName: public
  listeners:
    - name: killinit-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: killinit-wildcard-tls
